added alert to about page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <main>
   <ul class="topnav">
     <li><a class="active" href="">Home</a></li>
-    <li><a href="">Page1</a></li>
-    <li><a href="">Page2</a></li>
-    <li class="right"><a href="https://mastermind6666.github.io/reading-notes/">About</a></li>
+    <li><a href="https://mastermind6666.github.io/reading-notes/">Read me101 </a></li>
+    <li><a href="image/page.PNG">Wireframe</a></li>
+
+  
+    <li class="right" id ="about"><a href="">About</a></li>
   </ul>
  <h1>Welcome to motorbike Site Chose your Motorbike CC To Add </h1>
 <section class="image-container">
@@ -26,7 +28,6 @@
 <footer>
   <h1></h1>
 </footer>
-
   
   </main>
   <script src="script.js"></script>
